--- a/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/List.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/List.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>ArmedMFG Admin</PageTitle>
 
-<h1>Manage </h1>
+<h1>Поставки сырья</h1>
 
 @if (_materialSupplies == null)
 {
@@ -16,19 +16,19 @@ else
     
     <p class="esh-link-wrapper">
         <button class="btn btn-primary" @onclick="@(CreateClick)">
-            Create New
+            Добавить
         </button>
     </p>
 
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>Delivered Date</th>
-            <th>Material Type</th>
-            <th>Unit Price</th>
-            <th>Amount</th>
-            <th>Actions</th>
+            <th>ID</th>
+            <th>Дата доставки</th>
+            <th>Тип сырья</th>
+            <th>Цена (всего)</th>
+            <th>Объем</th>
+            <th>Действия</th>
         </tr>
         </thead>
         <tbody class="cursor-pointer">
@@ -42,11 +42,11 @@ else
                 <td>@materialSupply.Amount</td>
                 <td>
                     <button @onclick="@(() => EditClick(materialSupply.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
-                        Edit
+                        Изменить
                     </button>
 
                     <button @onclick="@(() => DeleteClick(materialSupply.Id))" @onclick:stopPropagation="true" class="btn btn-danger">
-                        Delete
+                        Удалить
                     </button>
                 </td>
             </tr>
