--- a/src/ArmedMFG.BlazorAdmin/Pages/MaterialTypePage/List.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/MaterialTypePage/List.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>ArmedMFG Admin</PageTitle>
 
-<h1>Manage Material Types</h1>
+<h1>Типы сырья</h1>
 
 @if (materialTypes == null)
 {
@@ -16,19 +16,19 @@ else
 
     <p class="esh-link-wrapper">
         <button class="btn btn-primary" @onclick="@(CreateClick)">
-            Create New
+            Добавить
         </button>
     </p>
 
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>@nameof(MaterialType.Description)</th>
-            <th>@nameof(MaterialType.CurrentAmount)</th>
-            <th>Actions</th>
+            <th>ID</th>
+            <th>Название</th>
+            <th>Категория</th>
+            <th>Описание</th>
+            <th>Обьем в складе</th>
+            <th>Действия</th>
         </tr>
         </thead>
         <tbody class="cursor-pointer">
@@ -42,11 +42,11 @@ else
                 <td>@item.CurrentAmount</td>
                 <td>
                     <button @onclick="@(() => EditClick(item.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
-                        Edit
+                        Изменить
                     </button>
 
                     <button @onclick="@(() => DeleteClick(item.Id))" @onclick:stopPropagation="true" class="btn btn-danger">
-                        Delete
+                        Удалить
                     </button>
                 </td>
             </tr>
