--- a/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/Delete.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/Delete.razor
@@ -46,7 +46,7 @@
                                 </dt>
 
                                 <dd>
-                                    @_materialSupply.UnitPrice
+                                    @_materialSupply.Price
                                 </dd>
                                 
                                 <dt>
