--- a/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/List.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/MaterialSupplyPage/List.razor
@@ -38,7 +38,7 @@ else
                 <td>@materialSupply.Id</td>
                 <td>@materialSupply.DeliveredDate</td>
                 <td>@materialSupply.MaterialType</td>
-                <td>@materialSupply.UnitPrice</td>
+                <td>@materialSupply.Price</td>
                 <td>@materialSupply.Amount</td>
                 <td>
                     <button @onclick="@(() => EditClick(materialSupply.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
